@@ -74,7 +74,7 @@ instance (ShakeValue q, ShakeValue a) => Rule (OracleQ q) (OracleA a) where
 --   should call @getPkgVersion $ GhcPkgVersion \"shake\"@ to rebuild when @shake@ is upgraded.
 addOracle :: (ShakeValue q, ShakeValue a) => (q -> Action a) -> Rules (q -> Action a)
 addOracle act = do
-    rule $ \(OracleQ q) -> Just $ OracleA <$> act q
+    addUserRule $ \(OracleQ q) -> Just $ OracleA <$> act q
     return askOracle
 
 
