@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Significant changes to defining custom rules
     Delete the deprecated defaultRule
     IMPORTANT: Incompatible on disk format change
     #428, don't persist errors to the database
